# FasterTransformer

./: .gitignore  CMakeLists.txt  run_ads_gpt2.sh  run_gpt2.sh  run_gpt2_h100.sh  run_hf_gpt2.sh
examples/cpp/: CMakeLists.txt
examples/cpp/multi_gpu_gpt/: CMakeLists.txt
examples/onnx/multi_gpu_gpt/: onnx_gpt2_moe_ckpt_convert.py
examples/pytorch/gpt/: gpt_summarization.py  multi_gpu_gpt_example.py
fastertransformer/: CMakeLists.txt  bert_encoder_transformer.h  decoding_beamsearch.h  decoding_sampling.h  gpt.h  open_decoder.h
fastertransformer/cuda/: CMakeLists.txt  attention_kernels.cu  attention_kernels.cuh  open_decoder.cu  topk_kernels_v2.cu  topk_kernels_v2.cuh
fastertransformer/gemm_test/: CMakeLists.txt  decoder_gemm_func.cc  decoder_gemm_func.h
fastertransformer/jit/: CMakeLists.txt  py_bind.cc
fastertransformer/jit/passes/: CMakeLists.txt  fuse_layer_norm.cc  fuse_layer_norm.h
fastertransformer/th_op/: CMakeLists.txt  decoder.cc  decoder.h  ft_op.cc  fused_add_layer_norm.cc  fused_add_layer_norm.h  topk.cc  topk.h
fastertransformer/trt_fused_multihead_attention/: qkvToContext.cu
fastertransformer/utils/: common.h  functions.h
ort_benchmark/: benchmark_ort_gpt2.py
sample/: test_topk.py
sample/cpp/: CMakeLists.txt  topk_sample.cc
sample/pytorch/: decoder_sample.py  encoder_sample_with_onnx.py  nar_decoder_sample.py  nar_decoder_sample_cudagraph.py  nar_encoder_sample.py
sample/pytorch/jit/: bangv2_opt.py  fuse_add_layer_norm_pass.py  graph_editor.py  test_linear.py
tools/gemm_test/: CMakeLists.txt  decoding_gemm.h
(+30 files in other folders)
